--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.2.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-debounce": "^2.6.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
